blueroses.css
/* ... */
pane {
    backdrop-filter: blur(10px);
}

nav#SecondaryNav.Expanded {
    height:90vh !important;
    border:2px solid #fc4b7f !important;
    border-top:none !important;
}

#SearchForm > input {
  background:#3e36ab;
  background-position: center;
  border:3px solid #fc4b7f;
  border-radius:8px;
  box-shadow:0px 0px 3px inset #000000;
  padding:8px !important;
    padding-left:8px !important;
    padding-right:24px !important;
}
	
/*classic breadcrumbs - everywhere*/
#Breadcrumb { font-size:var(--BreadcrumbFontSize); font-weight:bold; padding:.25em .75em; border-radius:1em; align-self:flex-end;}#Breadcrumb img {display:none;}#Breadcrumb .RightArrowIcon {width:0px;margin-left:7px;margin-right:12.5px;}#Breadcrumb .RightArrowIcon:after {content:"/";}

div.ThirdPartyModule {
    margin-left: 2px;
    margin-right: 2px;
}

